[project]
name = "Crystools-MonitorOnly"
description = "Resource monitor for Nvidia within ComfyUI"
version = "0.9.2"
license = {file = "LICENSE"} 
classifiers = [
	"Environment :: GPU :: NVIDIA CUDA"
]

dependencies = ["nvidia-ml-py"]

[project.urls]
Repository = "https://github.com/BobRandomNumber/ComfyUI-Crystools-MonitorOnly"

[tool.comfy]
PublisherId = "bobrandomnumber"
DisplayName = "ComfyUI-Crystools-MonitorOnly"


